// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormField /> errors for invalid prefix 1`] = `
"Warning: Failed prop type: \`FormField\` only accepts children of type Prefix
    in FormField"
`;

exports[`<FormField /> errors for invalid suffix 1`] = `
"Warning: Failed prop type: \`FormField\` only accepts children of type Suffix
    in FormField"
`;

exports[`<FormField /> hides the label 1`] = `
<section
  className="f1w0znbn"
>
  <div
    className=""
  >
    <label
      className="flc4a5n"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="fg75sgm"
    >
      <div
        className="f8xi195"
      >
        Foo
      </div>
    </div>
  </div>
</section>
`;

exports[`<FormField /> renders input after the label 1`] = `
<section
  className="f1w0znbn"
>
  <div
    className=""
  >
    <label
      className="fsss56w"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="f14cbhw9"
    >
      <div
        className="f8xi195"
      >
        Foo
      </div>
    </div>
  </div>
</section>
`;

exports[`<FormField /> renders input after the label 2`] = `
<section
  className="f1w0znbn"
>
  <div
    className="fddsvlq"
  >
    <label
      className="fsss56w"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="fg9j8xs"
    >
      <div
        className="f8xi195"
      >
        Foo
      </div>
    </div>
  </div>
</section>
`;

exports[`<FormField /> renders input before the label 1`] = `
<section
  className="f1w0znbn"
>
  <div
    className=""
  >
    <div
      className="f14cbhw9"
    >
      <div
        className="f8xi195"
      >
        Foo
      </div>
    </div>
    <label
      className="fsss56w"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
  </div>
</section>
`;

exports[`<FormField /> renders input before the label 2`] = `
<section
  className="f1w0znbn"
>
  <div
    className="fddsvlq"
  >
    <div
      className="fsktlp7"
    >
      <div
        className="f8xi195"
      >
        Foo
      </div>
    </div>
    <label
      className="fsss56w"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
  </div>
</section>
`;

exports[`<FormField /> supports a prefix 1`] = `
<section
  className="f1w0znbn"
>
  <div
    className=""
  >
    <label
      className="fsss56w"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="f14cbhw9"
    >
      <div
        className="f1em3zdk"
      >
        <Prefix>
          Foo
        </Prefix>
      </div>
      <div
        className="f8xi195"
      >
        Foo
      </div>
    </div>
  </div>
</section>
`;

exports[`<FormField /> supports a suffix 1`] = `
<section
  className="f1w0znbn"
>
  <div
    className=""
  >
    <label
      className="fsss56w"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="f14cbhw9"
    >
      <div
        className="f8xi195"
      >
        Foo
      </div>
      <div
        className="f1em3zdk"
      >
        <Suffix>
          Foo
        </Suffix>
      </div>
    </div>
  </div>
</section>
`;
